k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: jhjun07/spring-k8s-demo:01017c8eeae42666ebef326d107c68a412f88405
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
