k8s/service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app-ingress
spec:
  rules:
    - host: spring.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-app-svc
                port:
                  number: 80
